form group through service

--- a/src/app/form-module/component/date/date.component.html
+++ b/src/app/form-module/component/date/date.component.html
@@ -1,4 +1,4 @@
 <div class="">
     <label>Date</label>
-    <input type="date" name=""/>
+    <input type="datetime-local" placeholder="{{formField.palceholder}}" name="{{formField.name}}" id="{{formField.name}}"/>
 </div>
