--- a/src/app/form-module/component/email/email.component.html
+++ b/src/app/form-module/component/email/email.component.html
@@ -1,5 +1,5 @@
-<div class="">
+<div class="" >
     <label>{{formField.label}}</label>
-    <input type="{{formField.type}}" placeholder="{{formField.palceholder}}" name="{{formField.name}}" id="{{formField.name}}"/>
+    <input type="{{formField.type}}" placeholder="{{formField.palceholder}}" (input)="onInputChange($event)"
+        id="{{formField.name}}" />
 </div>
-
