--- a/src/app/jsonform/dynamicform/dynamicform.component.html
+++ b/src/app/jsonform/dynamicform/dynamicform.component.html
@@ -16,8 +16,7 @@
                                type="{{ formField.fieldType }}" 
                                value="" 
                               [required]="formField.required"
-                              formControlName="{{ formField.fieldName }}" />
-                    <br>
+                              formControlName="{{ formField.fieldName }}" /><br>
                 </div>
                 <div class="button text-right">
                     <button type="submit" class="btn btn-danger" [disabled]="this.form.invalid">Submit</button>
