--- a/src/app/form-module/render/form-fields/form-fields.component.html
+++ b/src/app/form-module/render/form-fields/form-fields.component.html
@@ -1,3 +1,24 @@
+<!-- <div *ngFor="let formField of formFields" class="form-group" [formGroup]="form.createFromJson()">
+    <div [ngSwitch]="formField.type" class="mt-3">
+        <ng-container *ngSwitchCase="'text'">
+            <app-text [formField]="formField"></app-text>
+        </ng-container>
+        
+        <ng-container *ngSwitchCase="'email'">
+            <app-email [formField]="formField"></app-email>
+        </ng-container>
+        
+        <ng-container *ngSwitchCase="'password'">
+            <app-password [formField]="formField"></app-password>
+        </ng-container>
+
+        <ng-container *ngSwitchCase="'datepicker'">
+            <app-date [formField]="formField"></app-date>
+        </ng-container>
+    </div>
+</div> -->
+
+<!-- [formGroup]="form.createFromJson()" -->
 <div *ngFor="let formField of formFields" class="form-group">
     <div [ngSwitch]="formField.type" class="mt-3">
         <ng-container *ngSwitchCase="'text'">
@@ -11,5 +32,10 @@
         <ng-container *ngSwitchCase="'password'">
             <app-password [formField]="formField"></app-password>
         </ng-container>
+
+        <ng-container *ngSwitchCase="'datepicker'">
+            <app-date [formField]="formField"></app-date>
+        </ng-container>
     </div>
 </div>
+
