new json file added

--- a/src/app/form-module/component/email/email.component.html
+++ b/src/app/form-module/component/email/email.component.html
@@ -1,5 +1,5 @@
 <div class="" >
     <label>{{formField.label}}</label>
-    <input type="{{formField.type}}" placeholder="{{formField.palceholder}}" (input)="onInputChange($event)"
+    <input type="{{formField.type}}" placeholder="{{formField.placeHolder}}" (input)="onInputChange($event)"
         id="{{formField.name}}" />
 </div>
