--- a/src/app/form-module/component/text/text.component.html
+++ b/src/app/form-module/component/text/text.component.html
@@ -1,5 +1,5 @@
 <div>
     <label>{{formField.label}}</label>
-    <input type="text" placeholder="{{formField.palceholder}}" id="{{formField.name}}" 
+    <input type="text" placeholder="{{formField.placeHolder}}" id="{{formField.name}}" 
         (input)="onInputChange($event)"/>
 </div>
