--- a/src/app/form-module/render/form-render/form-render.component.html
+++ b/src/app/form-module/render/form-render/form-render.component.html
@@ -1,10 +1,17 @@
-<div class="container">
+<div>
     <!-- <app-form-fields [formFields]="jsonData.fields"></app-form-fields> -->
-    <form [formGroup]="form" class="bg-info p-5" (ngSubmit)="onSubmit()">
-        <div  class="form-group">
-            <app-form-fields [formFields]="jsonData.fields" (parantData)="onDataReceived($event)"></app-form-fields>
+    <form class="p-1" (ngSubmit)="onSubmit()" id="{{jsonData.userForm.id}}" name="{{jsonData.userForm.title}}">
+        <div>
+            <h1 class="text-center">{{jsonData.userForm.title}}</h1>
+            <hr />
+            <p class="font-weight-bold">{{jsonData.userForm.subtitle}}</p>
+        </div>
+        <div class="form-group m-4">
+            <app-form-fields [formFields]="jsonData.userForm.fields"
+                (parantData)="onDataReceived($event)"></app-form-fields>
         </div>
         <div class="button">
+            <button type="button" class="btn btn-secondary btn-sm mt-3 ml-2">Cancel</button>
             <button class="btn btn-success btn-sm mt-3">Submit</button>
         </div>
     </form>
