--- a/src/app/form-module/render/form-fields/form-fields.component.html
+++ b/src/app/form-module/render/form-fields/form-fields.component.html
@@ -1,7 +1,8 @@
-<!-- <div *ngFor="let formField of formFields" class="form-group" [formGroup]="form.createFromJson()">
+<div *ngFor="let formField of formFields" class="form-group">
     <div [ngSwitch]="formField.type" class="mt-3">
         <ng-container *ngSwitchCase="'text'">
-            <app-text [formField]="formField"></app-text>
+            <!-- <app-text [formField]="formField" (dataToParent)="onDataReceived($event)"></app-text> -->
+            <app-text [formField]="formField" [form]="form"></app-text>
         </ng-container>
         
         <ng-container *ngSwitchCase="'email'">
@@ -15,27 +16,29 @@
         <ng-container *ngSwitchCase="'datepicker'">
             <app-date [formField]="formField"></app-date>
         </ng-container>
-    </div>
-</div> -->
 
-<!-- [formGroup]="form.createFromJson()" -->
-<div *ngFor="let formField of formFields" class="form-group">
-    <div [ngSwitch]="formField.type" class="mt-3">
-        <ng-container *ngSwitchCase="'text'">
-            <app-text [formField]="formField" (dataToParent)="onDataReceived($event)"></app-text>
-        </ng-container>
-        
-        <ng-container *ngSwitchCase="'email'">
-            <app-email [formField]="formField" (dataToParent)="onDataReceived($event)"></app-email>
-        </ng-container>
-        
-        <ng-container *ngSwitchCase="'password'">
-            <app-password [formField]="formField"></app-password>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'datepicker'">
-            <app-date [formField]="formField" (dataToParent)="onDataReceived($event)"></app-date>
+        <ng-container *ngSwitchCase="'group'">
+            <h4>{{formField.label}}</h4>
+            <div *ngFor="let subField of formField.fields" class="form-group">
+                <div [ngSwitch]="subField.type" class="mt-3">
+                    
+                    <ng-container *ngSwitchCase="'text'">
+                        <app-text [formField]="subField" [form]="form"></app-text>
+                    </ng-container>
+                    
+                    <ng-container *ngSwitchCase="'email'">
+                        <app-email [formField]="subField"></app-email>
+                    </ng-container>
+                    
+                    <ng-container *ngSwitchCase="'password'">
+                        <app-password [formField]="subField"></app-password>
+                    </ng-container>
+            
+                    <ng-container *ngSwitchCase="'datepicker'">
+                        <app-date [formField]="subField"></app-date>
+                    </ng-container>
+                </div>
+            </div>
         </ng-container>
     </div>
 </div>
-
